--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .container {
     width: 80%;
     max-width: 800px;
+    min-width: 400px;
     margin: 20px auto;
     padding: 30px;
     background-color: rgba(0, 0, 0, 0.3);
@@ -19,6 +20,7 @@
 .person {
     width: 20%;
     max-width: 200px;
+    min-width: 150px;
     height: 200px;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
