--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@
     min-width: 150px;
     height: 200px;
     background-color: rgba(0, 0, 0, 0.3);
+    background-image: url('pictures/Question-Mark.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 10px;
     display: flex;
     align-items: center;
