--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,10 @@
     color: white;
     background-color: rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 768px) {
+    .person {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+}
