--- a/styles.css
+++ b/styles.css
@@ -34,12 +34,17 @@
     justify-content: center;
 }
 
+.person a {
+    color: inherit;
+    text-decoration: none;
+}
+
 body:not(.is-mobile) .person:hover {
     background-color: rgba(0, 0, 0, 0.3);
     color: white;
-}
+} /*This is the hover effect (for computers only)*/
 
-body.is-mobile .person {
+body.is-mobile .person { 
     background-color: rgba(0, 0, 0, 0.3);
     color: white;
-}
+} /*This is for mobile devices (no hover effect)*/
