Add pages for all tios y tias

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
     color: transparent;
     border: 0px;
     font-size: 25px;
+    font-family: 'Times New Roman';
     background-image: url('pictures/Question-Mark.png');
     background-color: transparent;
     background-size: cover;
